--- a/samples/sample.html
+++ b/samples/sample.html
@@ -14,6 +14,14 @@
    </style>
 
    <!-- Control Script -->
+   <!-- In Adele, it may look like
+      c = canvas(sizeof(cat))
+      g1 = cat
+      g2 = moon
+      put g1@c
+      put g2.righttop@g1(righttop)
+      draw
+   -->
    <script>
       function draw() {
          var ascii = document.getElementById("ascii");
